@@ -567,17 +567,18 @@ class MultiView(object):
         raise PredicateMismatch(self.name)
 
 def viewdefaults(wrapped):
-    def wrapper(*arg, **kw):
+    def wrapper(self, *arg, **kw):
         defaults = {}
-        if len(arg) > 1:
-            view = arg[1]
+        if arg:
+            view = arg[0]
         else:
             view = kw.get('view')
+        view = self.maybe_dotted(view)
         if inspect.isclass(view):
             defaults = getattr(view, '__view_defaults__', {}).copy()
         defaults.update(kw)
         defaults['_backframes'] = 3 # for action_method
-        return wrapped(*arg, **defaults)
+        return wrapped(self, *arg, **defaults)
     return wraps(wrapped)(wrapper)
 
 class ViewsConfiguratorMixin(object):
